# FastAPI-Templates

./: pyproject.toml
alembic/: env.py
alembic/versions/: 2024-06-25_add_oauth.py  2024-06-25_init.py  2024-06-25_init2.py  2024-06-25_init_auth_user.py
app/: config.py  database.py  dependencies.py  main.py
app/models/: auth.py  mixins.py
app/routers/: __init__.py  auth.py
app/schemas/: auth.py
app/services/: auth.py
app/utils/: auth.py  repositories.py
app/utils/exceptions/: auth.py
